src/main/public/stylesheets/feesCustom.css
/* ... */
                        
                        .govuk-tabs__tab--selected {
                            border: 1px solid #b1b4b6;
                            border-bottom: 0;
                            margin-bottom: -1px;
                            background-color: #fff;
                            text-decoration: none !important;
                        }
                        
                        .govuk-heading-xl {
                            font-size: 48px;
                            line-height: 50px;
                            color: #0b0c0c;
                            font-family: "nta", Arial, sans-serif;
                            -webkit-font-smoothing: antialiased;
                            -moz-osx-font-smoothing: grayscale;
                            font-weight: 700;
                            display: block;
                            margin-top: 0;
                            margin-bottom: 30px;
                        }
                        
                        .fee-register-table-size {
                            width: 4000px;
                        }
                        
                        .custom-table-body {
                            background-color: #fff;
                            color: #0b0c0c;
                            font-family: "nta", Arial, sans-serif;
                            -webkit-font-smoothing: antialiased;
                            -moz-osx-font-smoothing: grayscale;
                            font-weight: 400;
                            font-size: 19px;
                            line-height: 25px;
                            margin-top: 0;
                            margin-bottom: 20px;
                        }
                        
                        .govuk-button2 {
                            font-family: "nta", Arial, sans-serif;
                            -webkit-font-smoothing: antialiased;
                            -moz-osx-font-smoothing: grayscale;
                            font-weight: 400;
                            font-size: 19px;
                            line-height: 19px;
                            text-decoration: none;
                            -webkit-box-sizing: border-box;
                            box-sizing: border-box;
                            display: inline-block;
                            position: relative;
                            height: 38px;
                            margin-top: 0;
                            margin-bottom: 22px;
                            padding: 10px 10px;
                            border: 2px solid transparent;
                            border-radius: 0;
                            color: 000;
                            background-color: #dbdad9;
                            -webkit-box-shadow: 0 2px 0 #003618;
                            box-shadow: 0 2px 0 #003618;
                            text-align: center;
                            vertical-align: top;
                            cursor: pointer;
                            -webkit-appearance: none;
                        }
                        
                        .black-text {
                            color: black;
                        }
                        
                        .govuk-\!-margin-top-7 {
                            margin-top: 40px !important;
                        }
                        
                        .govuk-\!-margin-bottom-6 {
                            margin-bottom: 30px !important;
                        }
                        
                        .govuk-\!-margin-top-9 {
                            margin-top: 60px !important;
                        }
                        
                        .govuk-\!-margin-bottom-0 {
                            margin-bottom: 0 !important;
                        }
                        
                        .title-with-secondary {
                            display: flex;
                            flex-grow: 1;
                            width: auto;
                        }
                        
                        .govuk-table__header {
                            font-weight: 700;
                            padding: 0.52632em 1.05263em 0.52632em 0;
                            border-bottom: 1px solid #bfc1c3;
                            text-align: left;
                        }
                        
                        .table-colxl {
                            width: 205px !important;
                        }
                        
                        .table-colsl {
                            width: 100px !important;
                        }
                        
                        .table-colml {
                            width: 150px !important;
                        }
                        
                        .govuk-check-your-answers {
                            display: table;
                            font-size: 19px;
                            line-height: 25px;
                            font-weight: 400;
                        }
                        
                        .govuk-check-your-answers--short {
                            width: 100%;
                        }
                        
                        .govuk-check-your-answers__contents {
                            display: table-row;
                            border-bottom-width: 0;
                            position: relative;
                            border-bottom: 1px solid #bfc1c3;
                        }
/* ... */

